HighContrast: Fix up action bar styling
Since HighContrast is not using different background colors
as much as Adwaita, we need to add borders to prevent things
from running into each other.

--- a/gtk/theme/HighContrast/_common.scss
+++ b/gtk/theme/HighContrast/_common.scss
@@ -1883,7 +1883,7 @@ levelbar {
 }
 
 /**********
- * Frames *
+ * rames *
  **********/
 frame border,
 .frame {
@@ -1891,10 +1891,13 @@ frame border,
   &.flat { border-style: none; }
   &:backdrop { border-color: $backdrop_borders_color; }
   padding: 0;
-  &.action-bar {
-    padding: 6px;
-    border-width: 1px 0 0;
-  }
+}
+
+actionbar box {
+  padding: 6px;
+  border-width: 1px 0 0;
+  border-color: $borders_color;
+  border-style: solid none none;
 }
 
 placessidebar,
